# TradeKingAPI

./: .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  example1.cpp
include/: TradeKing.hpp
src/: CMakeLists.txt  Market.cpp  Market.hpp  Request.cpp  Request.hpp  TradeKing.hpp  main.cpp
